@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: set-old.test,v 1.11 2000/06/01 00:33:27 hobbs Exp $
+# RCS: @(#) $Id: set-old.test,v 1.12 2000/08/21 01:37:51 ericm Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -668,7 +668,10 @@ test set-old-8.52 {array command, array names -glob} {
     set a(-exact) 1
     list [catch {array names a -glob} msg] $msg
 } {0 -glob}
-
+test set-old-8.53 {array command, array statistics on a non-array} {
+	catch {unset a}
+	list [catch {array statistics a} msg] $msg
+} [list 1 "\"a\" isn't an array"]
 
 test set-old-9.1 {ids for array enumeration} {
     catch {unset a}
